assets/css/styles.css
@font-face {
    font-family: 'beyno';
    src: url('../fonts/beyno.eot');
    src: url('../fonts/beyno.eot?#iefix') format('embedded-opentype'),
         url('../fonts/beyno.woff2') format('woff2'),
         url('../fonts/beyno.woff') format('woff'),
         url('../fonts/beyno.ttf') format('truetype'),
         url('../fonts/beyno.svg#beynoregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    bos-sizing: border-box;
}

body {
    background-image: url('../img/bg.jpg');
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    font-family: 'beyno', sans-serif;
    font-size: 12pt;
    min-height: 400px;
    min-width: 230px;
}

.container {
    position: relative;
    top: 50%;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    width: 100%;
    color: #fefefe;
    text-align: center;
}

.container h1 {
    font-size: 3em;
    font-weight: normal;
    word-spacing: 1em;
    letter-spacing: .1em;
    text-transform: uppercase;
    line-height: 200%;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    cursor: default;
}

.container a {
    display: inline-block;
    margin: 2em;
    width: 48px;
    height: 48px;
    background: url('../img/github.png');
    background-position: center center;
    background-repeat: no-repeat;
    background-size: contain;
}

@media (max-width: 700px) {
    .container h1 {
        font-size: 2em
    }
}
@media (min-width: 1200px) {
    .container h1 {
        font-size: 4em
    }
}

